<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454649"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="54dp"
        android:background="#1D1F21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="127dp"
        android:layout_height="31dp"
        android:background="#3B3B3E"
        android:breakStrategy="simple"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_view"
        android:textColor="#D7DCE2"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonComeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:shadowColor="#121738"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:rippleColor="#121738"
        app:strokeColor="#121738" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/edit_view"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonComeca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.918" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/hexagon"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComeca" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="151dp"
        android:layout_height="151dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/image_button"
        android:scaleType="fitCenter"
        android:src="@drawable/cloud_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComeca" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="252dp"
        android:layout_height="15dp"
        android:max="100"
        android:progress="27"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="556dp"
        android:text="@string/check_box"
        android:textColor="#000000"
        android:textColorHighlight="#121738"
        android:textColorHint="#121738"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="708dp"
        android:calendarTextColor="#000000"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:endYear="2100"
        android:startYear="1900"
        android:yearListSelectorColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:layout_marginTop="616dp"
        android:background="#F6E7E7"
        android:text="DatePicker"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:layout_marginTop="520dp"
        android:background="#F6E7E7"
        android:text="CheckBox"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="166dp"
        android:layout_height="26dp"
        android:layout_marginTop="320dp"
        android:background="#F6E7E7"
        android:text="ImageView"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="26dp"
        android:layout_marginTop="320dp"
        android:background="#F6E7E7"
        android:text="ImageButton"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:layout_marginTop="200dp"
        android:background="#F6E7E7"
        android:text="Button"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:layout_marginTop="100dp"
        android:background="#F6E7E7"
        android:text="EditText"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:background="#F6E7E7"
        android:text="ProgressBar"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="31dp"
        android:background="#F6E7E7"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#0B0B21"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.521" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>